# ChessGame

./: .clang-format  .gitignore  CMakeLists.txt  Chess.py  Functionality.py  GameBoard.py  LICENSE  Player.py  README.md  colorfont.py  main.py  test.py  testcase
include/: chess.h  colors.h  main.h  minimax.h
src/: chess.cpp  main.cpp  minimax.cpp
